--- a/index.html
+++ b/index.html
@@ -388,19 +388,13 @@
       </p>
       <ul>
         <li>E-mail: <a href="mailto:laky.eni@gmail.com">laky.eni@gmail.com</a></li>
-      <p>
-        <br>Or follow me:
-      </p>
-  
+     
   <div class="social-links">
     <a href="yourprofile" target="_blank" aria-label="LinkedIn">
       <i class="fab fa-linkedin"></i>
     </a>
-    <a href="yourprofile" target="_blank" aria-label="Instagram">
-      <i class="fab fa-instagram"></i>
-    </a>
-    <a href="yourprofile" target="_blank" aria-label="Facebook">
-      <i class="fab fa-facebook"></i>
+    <a href="https://github.com/lakyeni" target="_blank" aria-label="GitHub">
+      <i class="fab fa-github"></i>
     </a>
     <a href="https://wa.me/1234567890" target="_blank" aria-label="WhatsApp">
       <i class="fab fa-whatsapp"></i>
